tests/test13.output
/home/vladyslav/CLionProjects/mcc/tests/test13.c:2:7[0;31m error [0m
Variable 'x' has unallowable type 'void', near 'x', line 2

Encountered 1 semantic errors. Stopping compilation.
