tests/test13.c
int main() {
	void x = 5;
}